--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logoMark.svg" />
+    <link rel="icon" type="image" href="/logoMark.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Ball Out stats tracker</title>
   </head>
   <body>
     <div id="root" class="contents"></div>
